Fixed image height issue on small screen size.

--- a/src/pages/Recipe/components/CookingStep/CookingStep.module.css
+++ b/src/pages/Recipe/components/CookingStep/CookingStep.module.css
@@ -17,6 +17,7 @@
 
 .cardImg {
    width: 100%;
+   height: 100%;
    display: inline-block;
    object-fit: cover;
 
